--- a/style.css
+++ b/style.css
@@ -7,6 +7,15 @@ html,body {
 	height: 100%;
 	width: 100%;
 }
+#particles-js{
+    /*  background: rgb(3,167,176);
+    background: linear-gradient(139deg, rgba(3,167,176,1) 0%, rgba(135,0,139,1) 79%, rgba(196,17,119,1) 100%);
+    */
+    height:100vh;
+	background-size: cover;
+	background-position: center;
+}
+
 
 .intro {
 	height: 100%;
@@ -28,12 +37,11 @@ html,body {
 }
 
 
-
 .content {
 	max-width: 1000px;
 	margin: 0 auto;
 	text-align: 50px;
-	padding-bottom: 28%;
+	padding-bottom: 40%;
 	padding-left: 3%
 }
 
@@ -48,19 +56,19 @@ html,body {
 
 .btn {
 	font-family: "Montserrat", sans-serif;
-	font-size: 135%;
+	font-size: 80%;
 	font-weight: 400;
 	color: #070707;
 	text-transform: uppercase;
 	text-decoration: none;
 	border: 2px solid #070707;
-	padding: 10px 20px;
-	border-radius: 25px;
+	padding: 8px 8px;
+	border-radius: 15px;
 	transition: all 0.8s;
 }
 
 .btn:hover {
-font-size: 135%;
+font-size: 110%;
 color: #456254;
 border: solid #456254 3px;
 }
@@ -94,7 +102,7 @@ p{
 	font-size: 300%;
 }
 .btn{
-	font-size: 130%;
+	font-size: 80%;
 	padding: 9px 17px;
 }
 p{
@@ -109,10 +117,10 @@ p{
 	padding-bottom: 80%;
 }
 .content h1{
-	font-size: 250%;
+	font-size: 30%;
 }
 .btn{
-	font-size: 110%;
+	font-size: 40%;
 	padding: 6px 14px;
 }
 p{
